<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation">
    <string name="chip1_intense">Intense</string>
    <string name="chip2_gentle">Gentle</string>
    <string name="chip3_nature">Nature</string>
    <string name="chip4_Locations">Locations</string>
    <string name="chip5_Popular">Popular</string>
    <string name="chip6_Misc">Misc.</string>
        <string name="chip1_donation">$0.99</string>
        <string name="chip2_donation">$2.99</string>
        <string name="chip3_donation">$9.99</string>
        <string name="chip4_donation">$19.99</string>
        <string name="donation_iapName_1">donation_p1</string>
        <string name="donation_iapName_2">donation_p2</string>
        <string name="donation_iapName_3">donation_p3</string>
        <string name="donation_iapName_4">donation_p4</string>
        <string name="btnText_donate">DONATE</string>
        <string name="select_at_least_one">Please select the donation amount.</string>
        <string name="unable_to_display_price">Unable to display donation price in local currency.</string>
    <string name="btmsheet_permission_msg1_WriteExternal">Choose <b>OPEN SETTINGS</b>, then allow the following permissions and try again.\n\nHitting <b>CANCEL</b> will dismiss your purchase and disable restoring previously purchased ringtones.</string>
    <string name="btmsheet_permission_msg2_ReadPhoneState">Choose <b>OPEN SETTINGS</b>, then allow the following permissions and try again. <b><u>Alarm will not fire without an access to this permission.</u></b></string>
    <string name="alertDialog_perm_msg">Starting Android 12, a user\'s permission is required to access the phone call status. Given access will be used to prevent an alarm go off during a phone call. <u><b>Alarm will not fire without an access to this permission</b></u>.</string>
    <string name="alertdialog_confirm_text">CONFIRM</string>
    <string-array name="fade_in_time_sec_values" tools:ignore="MissingTranslation">
        <item>1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <string name="alarm_prealarm">Gentle Pre-alarm</string>
    <string name="prealarm_duration_title" tools:ignore="MissingTranslation">Pre-alarm duration</string>
    <string-array name="prealarm_duration_entries">
        <item>Off</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string-array name="prealarm_duration_values" tools:ignore="MissingTranslation">
        <item>-1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <string name="prealarm_summary">Pre-alarm will start
<xliff:g id="minutes">%d</xliff:g> minutes before the main alarm</string>
    <string name="info_fragment_prealarm_summary"><xliff:g id="minutes">%d</xliff:g> minutes pre-alarm</string>
    <string name="prealarm_off_summary">Pre-alarm is switched off</string>
    <string name="master_volume">Master volume</string>
    <string name="menu_share">Share</string>
    <string name="menu_bugreport">Bug Report</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="dialog_say_thanks_review_button">Rate the app</string>
    <string name="dialog_bugreport_hint">Describe your complaint here</string>
    <string name="longclick_dismiss_title">Longclick dismiss</string>
    <string name="longclick_dismiss_summary">Hold the dismiss button to dismiss the alarm</string>
    <string name="fade_in_time_sec_title" tools:ignore="MissingTranslation">Fade-in Duration</string>
    <string-array name="fade_in_time_sec_entries">
        <item>Off</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>60 seconds</item>
        <item>120 seconds</item>
    </string-array>
    <string name="fade_in_summary">Fade-in duration is <xliff:g id="seconds">%d</xliff:g> seconds</string>
    <string name="fade_in_off_summary">Fade-in is switched off</string>
    <string-array name="alarm_set_short">
        <item>Less than a minute from now</item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g></item>
        <item><xliff:g example="2 hours" id="HOURS">%2$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g></item>
        <item><xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
    </string-array>
    <string name="theme_title">Interface theme</string>
    <string-array name="themes_entries">
        <item>Dark</item>
        <item>Light</item>
        <item>Synthwave</item>
    </string-array>
    <string-array name="themes_values">
        <item>dark</item>
        <item>light</item>
        <item>synthwave</item>
    </string-array>
    <string name="preference_list_row_layout_title">Layout style</string>
    <string-array name="preference_list_row_layout_entries">
        <item>Compact</item>
        <item>Bold</item>
        <item>Classic</item>
    </string-array>
    <string-array name="preference_list_row_layout_values">
        <item>compact</item>
        <item>bold</item>
        <item>classic</item>
    </string-array>
    <string name="app_name_jjong">The Glendales Alarmify</string>
    <string-array name="snooze_duration_with_off_entries">
        <item>Off</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="snooze_duration_with_off_values">
        <item>-1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="alarm_alert_reschedule_text">Reschedule</string>
    <string name="alarm_alert_hold_the_button_text">Hold the button!</string>
    <string name="preference_category_sound">Volume and Vibration</string>
    <string name="preference_alarm_control">Alarm Control</string>
    <string name="preference_category_ui">User interface</string>
    <string name="preference_category_durations">Durations</string>
    <string name="details_no_ringtone_picker">No Ringtone provider found…</string>
    <string name="permissions_external_storage_text">It seems that we cannot play %s, probably because a permission is required. If you want, you can grant the permission. Alternatively, select a different sound. This decision can be changed in System Settings.</string>
    <string name="missing_ringtone_alert">\nWe have detected a missing ringtone.\n\nPlease visit Ringtone tab(🔔) for auto recovery.</string>
    <string name="ps_error_alert">In order to view our ringtone list, you need to be signed in to <b>GOOGLE PLAY STORE</b>.</string>
    <string name="openNavBlind">Open</string>
    <string name="closeNavBlind">Close</string>
    <string name="menu_about_title">About</string>
    <string name="dialog_about_content">Simple Alarm Clock is an open source project which brings pure alarm experience to you by combining essential features and clean interface.

       \n\nTip:
       \n· Select layout size in settings
       \n· Select color theme in settings

       \n\nNew in this version:
       \n· Fixes for Android 9
       \n· New Design
       \n· Select row size in settings

       \n· <a href="https://github.com/yuriykulikov/AlarmClock">Learn more on GitHub</a>

       \n\nSupport the app:
       \n· <a href="https://play.google.com/store/apps/details?id=com.premium.alarm">Go premium</a>
   </string>
    <string name="purchase_item_empty"><b>NO PURCHASE RECORD FOUND.</b></string>
    <string name="dialog_contact_us">
    Have any issues? Reach out to our support team for immediate assistance at jlitzon@gmail.com
    </string>
    <string name="dialog_bugreport_faq"><b>Common issues and how to fix them</b>
       \n\n<b><font color="#FF0000">If after the update all alarms disappeared and are not saved anymore</font></b>, it means that during the update Android has locked our database. It is a bug in Android OS and the only way to resolve this is to reinstall!

       \n\n<font color="#FF0000">If something was working and then suddenly broke</font>, it is very likely that Android has messed up the application cache. This happens from time to time to all apps. <b>Clearing the cache (App info -> Storage -> Clear cache) or in the worst case uninstalling and reinstalling the app usually resolves the issue.</b>

       \n\n<font color="#FF0000">If there is no sound</font>, please check your device settings. You must use at least Alarms Only on Android 8 and you should not use Do not disturb on Android 9. Read more on <a href="https://support.google.com/android/answer/9069335">Google support page</a>

       \n\n<font color="#FF0000">If alarm did not go off</font>, please make sure that you did not accidentally switched it off. We get a number of complaints regarding this and we see that users are simply switching the alarm off after a while <b>in their sleep</b> using “Dismiss” button. If you experience that, move the phone further away when you go to bed.

       \n\n<font color="#FF0000">If nothing from the above list helps</font>, please write us a message in the field below. We will do our best to try to help you.
   </string>
    <string name="dialog_help_our_team">Help Our Team</string>
    <string name="dialog_purchased_items">Purchased Alarm Tones</string>
    <string name="dialog_say_thanks_title">Help Our Team</string>
    <string name="dialog_contact_us_title">Contact Us</string>
    <string name="dialog_say_thanks_review_message">Thanks a lot for taking your time to say thanks! “Simple Alarm Clock” is an open source non-profit project. We will never use ads or gather user data to earn money. However, we are extremely happy if you like our work. One of the best ways to say thanks is to write a positive review. You can also ask a question or leave your feature request.</string>
    <string name="dialog_say_thanks_premium_text">If you really like the app, you could consider upgrading to the premium version! Premium sounds great, does it not?</string>
    <string name="dialog_say_thanks_donate_message">Another great way to support the app is to buy me a coffee or a donut! You can do this using one of the following options</string>
    <string name="dialog_say_thanks_premium_text_as_button"><a href="https://play.google.com/store/apps/details?id=com.premium.alarm">Go premium</a></string>
    <string name="notification_channel_high_prio">Big popup with snooze and dismiss buttons</string>
    <string name="notification_channel_default_prio">Notification for a snoozed alarm</string>
    <string name="notification_channel_low_prio">Expired alarm notification</string>
    <string name="alert_notifications_title">Oh no! Big problem!</string>
</resources>