<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presenter.HelpOurTeamActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/id_toolbar_help_our_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/dialog_help_our_team"
        app:titleTextColor="@color/mat_red"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Chips -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blackish_trans"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/id_chipGroup_HelpOurTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                app:chipSpacingHorizontal="2dp"
                app:chipSpacingVertical="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:singleSelection="true"
                app:singleLine="false">

                <!-- Chip 마다 붙인 태그 = Play Console 에 등록된 Product id 와 일치해야함!-->
                <com.google.android.material.chip.Chip
                    android:id="@+id/donation_chip_1"
                    style="@style/customChipStyle"
                    android:tag="@string/donation_iapName_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/chip1_donation"
                    app:checkedIcon="@drawable/chip_check_empty_background"
                    app:chipIcon="@drawable/donation_chip1_coffee_24"
                    app:chipIconVisible="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/donation_chip_2"
                    style="@style/customChipStyle"
                    android:tag="@string/donation_iapName_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/chip2_donation"
                    app:checkedIcon="@drawable/chip_check_empty_background"
                    app:chipIcon="@drawable/donation_chip2_lunch_24"
                    app:chipIconVisible="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/donation_chip_3"
                    style="@style/customChipStyle"
                    android:tag="@string/donation_iapName_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/chip3_donation"
                    app:checkedIcon="@drawable/chip_check_empty_background"
                    app:chipIcon="@drawable/donation_chip3_wine_24"
                    app:chipIconVisible="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/donation_chip_4"
                    style="@style/customChipStyle"
                    android:tag="@string/donation_iapName_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/chip4_donation"
                    app:checkedIcon="@drawable/chip_check_empty_background"
                    app:chipIcon="@drawable/donation_chip4_book_24"
                    app:chipIconVisible="true"/>


            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/id_btn_donateNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnText_donate"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/clock_blue"
                android:text="넣을 내용: Google 이 30퍼센트 먹음. Thank you. Tax? 이건 가격에 포함되게 했지만 확인 필요.\n Perks?"/>

        </LinearLayout>

        <!--Loading Circle: 마지막 View will simply overlay everything else. -->
        <include layout="@layout/loadingcircle_overlay_1"/>

    </FrameLayout>






</LinearLayout>